# flexe

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  HIERARCHICAL_TRACE_RESULTS.md  MILESTONES.md  PLAN.md  README.md  TASKS-M0.md  benchmark-htrace.sh
src/: aes_stubs.c  aes_stubs.h  bt_stubs.c  bt_stubs.h  display_stubs.c  display_stubs.h  elf_symbols.c  elf_symbols.h  esp_timer_stubs.c  esp_timer_stubs.h  flexe_session.c  flexe_session.h  freertos_stubs.c  freertos_stubs.h  hierarchical_trace.c  hierarchical_trace.h  jit.c  jit.h  jit_emit_x64.h  loader.c  loader.h  main.c  memory.c  memory.h  mpi_stubs.c  mpi_stubs.h  msvc_compat.c  msvc_compat.h  peripherals.c  peripherals.h  rom_stubs.c  rom_stubs.h  savestate.c  savestate.h  sdcard_stubs.c  sdcard_stubs.h  sha_stubs.c  sha_stubs.h  touch_stubs.c  touch_stubs.h  (+7 more)
tests/: test_alu.c  test_boolean.c  test_branch.c  test_debug.c  test_decode.c  test_esp_timer.c  test_exception.c  test_firmware_compat.c  test_fp_arith.c  test_fp_ldst.c  test_freertos.c  test_helpers.h  test_integration.c  test_jit.c  test_loader.c  test_loadstore.c  test_loop.c  test_mac16.c  test_main.c  test_memory.c  test_memory_map.c  test_move.c  test_peripherals.c  test_rom_stubs.c  test_shift.c  test_window.c
tools/: trace-filter.c  xt-dis.c
